traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:39: error: ';' expected but 'else' found.
  else
  ^